# template-publication-workflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  copier.yml  pyproject.toml
.cicleci/: config.yml
.circleci/: config.yml
template/: .gitignore  README.md.jinja  Snakefile  {% if add_zenodo %}.zenodo.json{% endif %}.jinja  {% if workshop_tutorial %}tutorial.md{% endif %}.jinja
template/.github/workflows/: {% if add_zenodo %}next_steps_zenodo_issue.md{% endif %}.jinja
template/config/: manuscript.mplstyle
template/workflow/: Snakefile
template/workflow/envs/: environment.yaml.jinja
template/workflow/rules/: calculate_reverberation_time.smk  generate_room_impulse_response.smk  plot_single_frequency_data.smk  write_room_impulse_response.smk
template/workflow/scripts/: calculate_reverberation_time.py  generate_room_impulse_response.py  plot_single_frequency_data.py  write_room_impulse_response.py
tests/: conftest.py  test_copier.py  test_integration.py
