[project]
name = "template-publication-workflow"
version = "0.1.0"
description = "Copier template for FAIR publication workflows using snakemake."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "The pyfar developers", email = "info@pyfar.org" },
]
keywords = [
    'copier',
    'template',
    'publication',
    'workflow',
    'FAIR',
    'pyfar',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    
]
dependencies = [
    "copier",
    "numpy",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-copie",
    "watchdog",
    "ruff==0.8.3",
    "coverage",
    
]
dev = ["cookiecutter_pypackage[tests,docs]"]

[project.urls]
Tracker = "https://github.com/pyfar/template-publication-workflow/issues"
Homepage = "https://pyfar.org/"
Source = "https://github.com/pyfar/template-publication-workflow"
Changelog = "https://github.com/pyfar/template-publication-workflow/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters


[tool.ruff]
exclude = [
    ".git",
    "docs",
    "template",
]
include = [
    "pyproject.toml",
    "tests",
]
line-length = 79
lint.ignore = [
    "D200",   # One-line docstring should fit on one line with quotes
    "D202",   # No blank lines allowed after function docstring
    "D205",   # 1 blank line required between summary line and description
    "D401",   # First line should be in imperative mood
    "D404",   # First word of the docstring should not be "This"
    "B006",   # Do not use mutable data structures for argument defaults
    "B008",   # Do not perform calls in argument defaults
    "PT018",  # Assertion should be broken down into multiple parts
    "PT019",  # Fixture `_` without value is injected as parameter
]
lint.select = [
    "B",      # bugbear extension
    "ARG",    # Remove unused function/method arguments
    "C4",     # Check for common security issues
    "E",      # PEP8 errors
    "F",      # Pyflakes
    "W",      # PEP8 warnings
    "D",      # Docstring guidelines
    "D417",   # Missing argument descriptions in the docstring
    "PT",     # Pytest style
    "A",      # Avoid builtin function and type shadowing
    "ERA",    # No commented out code
    "NPY",    # Check all numpy related deprecations
    "COM",    # trailing comma rules
    "I002",   # missing required import
    "TID252", # Use absolute over relative imports
    "FIX",    # Code should not contain FIXME, TODO, etc
]

# Ignore missing docstrings in tests
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",
    "D101",
    "D103",
    "D104",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '\nversion = "{current_version}"'
replace = '\nversion = "{new_version}"'
